--- a/web/index.html
+++ b/web/index.html
@@ -23,13 +23,13 @@
     <!-- iOS meta tags & icons -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="apple-mobile-web-app-title" content="FruitSmart" />
+    <meta name="apple-mobile-web-app-title" content="Needify" />
     <link rel="apple-touch-icon" href="icons/Icon-192.png" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="icon" type="image/png" href="favicon.ico" />
 
-    <title>FruitSmart</title>
+    <title>Needify</title>
     <link rel="manifest" href="manifest.json" />
 
     <script>
